k8s/additions/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: salinesel-in
spec:
  selector:
    matchLabels:
      app: salinesel-in
  template:
    metadata:
      annotations:
        container.apparmor.security.beta.kubernetes.io/gcsfuse: localhost/fuse
      labels:
        app: salinesel-in
    spec:
      serviceAccount: salinesel-in
      volumes:
        - name: creds
          secret:
            secretName: salinesel-in
      containers:
        - name: salinesel-in
          image: klakegg/hugo:0.93.2
          workingDir: /mnt
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
