k8s/additions/service.yml
apiVersion: v1
kind: Service
metadata:
  name: salinesel.in
spec:
  selector:
    app: salinesel.in
  ports:
    - port: 80
      targetPort: 80
